Cleaned up unused imports and reformatted